--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div> align="center"
+<div>
   
 Codecademy profile: <a href=https://codecademy.com/profiles/corentinthuillot> codecademy.com/profiles/corentinthuillot <a/>
 
