--- a/index.html
+++ b/index.html
@@ -7,3 +7,11 @@ Codecademy profile: <a href=https://codecademy.com/profiles/corentinthuillot> co
 LinkedIn profile: <a href=https://linkedin.com/in/corentinthuillot> linkedin.com/in/corentinthuillot <a/>
 
 <div/>
+
+<hr>
+  
+<a href="https://github.com/CorentinThuillot?tab=repositories">
+  <img
+       width="100%"
+       src="https://github-readme-stats.vercel.app/api?username=CorentinThuillot&show_icons=true&bg_color=30,D8E5EB,417D97&theme=graywhite">
+</a>
