--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <div align="center">
 Codecademy profile: <a href=https://codecademy.com/profiles/corentinthuillot> codecademy.com/profiles/corentinthuillot <a/>
 
+<hr>
+  
 LinkedIn profile: <a href=https://linkedin.com/in/corentinthuillot> linkedin.com/in/corentinthuillot <a/>
 <div/>
 
+<hr>
+  
 <div align="center">    
   <a href="https://github.com/CorentinThuillot?tab=repositories">
     <img
        width="100%"
-       src="https://github-readme-stats.vercel.app/api?username=CorentinThuillot&show_icons=true&bg_color=30,D8E5EB,417D97&theme=graywhite">
+       heignt="330"
+       src="https://github-readme-stats.vercel.app/api?username=CorentinThuillot&show_icons=true&include_all_commits=true&bg_color=30,D8E5EB,417D97&theme=graywhite">
   </a>
 <div/>
   
@@ -16,6 +21,7 @@ LinkedIn profile: <a href=https://linkedin.com/in/corentinthuillot> linkedin.com
   <a href="https://github.com/CorentinThuillot/codecademy">
     <img
       width="100%"
+      height="330"
       src="https://github-readme-stats.vercel.app/api/pin/?username=CorentinThuillot&repo=codecademy&bg_color=30,D8E5EB,417D97&theme=graywhite">
   </a>
 <div/>
