--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ LinkedIn profile: <a href=https://linkedin.com/in/corentinthuillot> linkedin.com
   <a href="https://github.com/CorentinThuillot?tab=repositories">
     <img
        width="100%"
-       heignt="165"
+       heignt="165px"
        src="https://github-readme-stats.vercel.app/api?username=CorentinThuillot&show_icons=true&include_all_commits=true&bg_color=30,D8E5EB,417D97&theme=graywhite">
   </a>
 <div/>
